samples/_failures_safe/1761163892_974ce7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e319d48c.c: In function ‘main’:
./samples/SAFE/__tmp_e319d48c.c:125:29: error: expected ‘]’ at end of input
  125 |     if (len > 0 && input[len
      |                             ^
      |                             ]
./samples/SAFE/__tmp_e319d48c.c:125:5: error: expected declaration or statement at end of input
  125 |     if (len > 0 && input[len
      |     ^~
